# defimon.highfunk.uk

./: .env.infura  .gitignore  ADMIN_DASHBOARD_V2_UPGRADE_REPORT.md  DASHBOARD_FIXED_STATUS.md  DASHBOARD_STATUS_REPORT.md  DEFIMON_PROJECT_DOCUMENTATION.wiki  DEFIMON_PROJECT_INDEX.wiki  DEFIMON_TEMPLATES.wiki  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  ENHANCED_MONITOR_FEATURES.md  ENHANCED_MONITOR_README.md  ETHEREUM_METRICS_ANALYSIS.md  ETH_NODE_SYNC_STATUS_REPORT.md  FINAL_DASHBOARD_STATUS.md  FINAL_UPDATE_REPORT.md  GITHUB_TEO_HERE_SETUP.md  GRAFANA_MANUAL_SETUP.md  GRAFANA_PASSWORD_UPDATE.md  GRAFANA_SETUP_COMPLETE.md  INFURA_INTEGRATION_SUMMARY.md  INTEGRATION_GUIDE.md  L2_ANALYSIS_REPORT.md  L2_ANALYTICS_SERVER_SUMMARY.md  L2_SETUP.md  MEDIAWIKI_DOCUMENTATION_README.md  MIGRATION_REPORT.md  NEW_APIS_INTEGRATION_SUMMARY.md  QUICKSTART.md  QUICKSTART_LINUX_MINT.md  README.md  README_ETH_NODE_LENOVO.md  REMOVED_EXTERNAL_API_KEYS.md  SDA1_DATA_MIGRATION_REPORT.md  SERVER_UPDATE_REPORT.md  TOOLS_MANAGEMENT_README.md  VIDEO_CROP_README.md  apply-network-optimizations.sh  askpass.sh  comprehensive_wifi_analysis.sh  (+26 more)
services/blockchain-node/: Cargo.toml  Dockerfile
services/blockchain-node/scripts/: start-node.sh
services/blockchain-node/src/: config.rs  cosmos_sync.rs  database.rs  ethereum.rs  evm_sync.rs  kafka.rs  l2_networks.rs  l2_sync.rs  main.rs  monitoring.rs  network.rs  network_registry.rs  polkadot_sync.rs  protocols.rs  substrate_sync.rs
services/blockchain-node/src/modules/: bitcoin.rs  cosmos.rs  evm.rs  mod.rs  movevm.rs  solana.rs  starknet.rs  (+1 more)
(+452 files in other folders)
